RESOLVED FIXED162747
URLParser: IPv6 addresses followed by a colon are invalid
https://bugs.webkit.org/show_bug.cgi?id=162747
Summary URLParser: IPv6 addresses followed by a colon are invalid
Alex Christensen
Reported 2016-09-29 12:57:42 PDT
URLParser: IPv6 addresses followed by a colon are invalid
Attachments
Patch (3.43 KB, patch)
2016-09-29 12:58 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2016-09-29 12:58:08 PDT
Alex Christensen
Comment 2 2016-09-29 13:20:52 PDT
Note You need to log in before you can comment on or make changes to this bug.