URLParser: IPv6 addresses followed by a colon are invalid https://bugs.webkit.org/show_bug.cgi?id=162747

Reviewed by Tim Horton.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parseIPv6Host):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206608 268f45cc-cd09-0410-ab3c-d52691b4dbfc